[package]
name = "agape"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name="agape"
path="src/main.rs"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
chrono = "0.4.22"
regex = "1.7.0"
serde_json = "1.0.87"
substring = "1.4.5"
serde = { version = "1.0.147", features = ["derive"] }
reqwest = { version = "0.11.12", features = ["json"] }
tokio = { version = "1.21.2", features = ["full"] }